# SeaSHell

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/corelib/: alias.c  config.c  core.h  expander.c  proc.c
src/include/: status.h
